@@ -41,12 +41,14 @@ ipmi_config_sensors_discrete_section (ipmi_config_state_data_t *state_data,
                                       struct ipmi_config_section **section_ptr)
 {
   struct ipmi_config_section *section = NULL;
-  char section_name[IPMI_CONFIG_MAX_SECTION_NAME_LEN];
+  char section_name[IPMI_CONFIG_MAX_SECTION_NAME_LEN + 1];
   ipmi_config_err_t rv = IPMI_CONFIG_ERR_FATAL_ERROR;
   ipmi_config_err_t ret;
 
   assert (state_data);
   assert (section_ptr);
+
+  memset (section_name, '\0', IPMI_CONFIG_MAX_SECTION_NAME_LEN + 1);
 
   if ((ret = ipmi_config_sensors_create_section_name (state_data,
                                                       section_name,
